update .env.sample file

--- a/srcs/.env.sample
+++ b/srcs/.env.sample
@@ -1,5 +1,17 @@
-DB_NAME=""
-DB_USER=""
-DB_PASSWORD=""
-DB_HOST=""
+## MariaDB Variables
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
 
+## WordPress Variables
+WP_URL=
+WP_TITLE=
+
+WP_ADMIN=
+WP_ADMIN_PASS=
+WP_ADMIN_MAIL=
+
+WP_USER=
+WP_USER_PASS=
+WP_USER_MAIL=
